# fan_controller

./: .gitignore  GEMINI.md  LICENSE  README.md  config.json  fan-controller-01.py  fan-controller-old.py  fan-controller.py  gui.py  notes.txt  pyproject.toml  response.txt  setup_permissions.sh
src/fan_controller/: __init__.py  core.py  gui.py  hardware.py  main.py
tests/: test_core.py  test_hardware.py
